# cutiecoco

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Cassette.cpp  Cassette.h  MachineDefs.h  README.md  Vcc.cpp  Vcc.rc  Vcc.vcxproj  coco3.cpp  config.cpp  defines.h  hd6309.cpp  hd6309.h  iobus.cpp  mc6809.cpp  mc6809.h  mc6821.cpp  mc6821.h  resource.h  tcc1014graphics.cpp  tcc1014mmu.cpp  tcc1014mmu.h  tcc1014registers.cpp  tcc1014registers.h
.beads/: issues.jsonl
.claude/: settings.local.json
.claude/skills/qt-release/: SKILL.md
.github/workflows/: build.yml
FD502/: fd502.rc  fd502_cartridge.cpp
GMC/: GMC.rc
Ramdisk/: main.rc
becker/: resource.rc
core/: CMakeLists.txt
core/include/dream/: audio.h  compat.h  debugger.h  emulation.h  framebuffer.h  keyboard.h  stubs.h  types.h
core/src/: audio.cpp  core.cpp  emulation.cpp  keyboard.cpp
emulation/: CMakeLists.txt  OpDecoder.cpp  coco3.cpp  coco3.h  defines.h  hd6309.cpp  hd6309.h  interrupts.h  iobus.cpp  mc6809.cpp  mc6809.h  mc6821.cpp  pakinterface.cpp  tcc1014graphics.cpp  tcc1014mmu.cpp  tcc1014registers.cpp
emulation/include/cutie/: audio.h  cartridge.h  compat.h  context.h  debugger.h  emulation.h  emulator.h  framebuffer.h  interfaces.h  joystick.h  keyboard.h  keymapping.h  stubs.h  types.h
emulation/libcommon/include/vcc/media/: disk_geometry.h
emulation/libcommon/src/bus/cartridges/: empty_cartridge.cpp
emulation/src/: audio.cpp  cartridge.cpp  cocoemu.cpp  context.cpp  core.cpp  emulation.cpp  joystick.cpp  keyboard.cpp  keymapping.cpp
installer/: DREAM.iss
libcommon/include/vcc/detail/: exports.h
libcommon/resource/: libcommon.rc
mpi/: mpi.rc
orch90/: main.rc
qt/: CMakeLists.txt
qt/cutiecoco.app/Contents/: Info.plist
qt/cutiecoco.app/Contents/MacOS/: cutiecoco
qt/include/: emulatorwidget.h  mainwindow.h
qt/src/: emulatorwidget.cpp  main.cpp  mainwindow.cpp
tests/: CMakeLists.txt  cpu_test_harness.cpp  cpu_test_harness.h  integration_tests.cpp  mc6809_tests.cpp
